<resources>
    <string name="app_name">GyqWanAndroid</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="home">首页</string>
    <string name="project">项目</string>
    <string name="square">广场</string>
    <string name="wxPublic">公众号</string>
    <string name="mine">我的</string>
</resources>
