<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_main"
        android:checked="true"
        android:icon="@drawable/menu_home"
        android:title="@string/home" />

    <item
        android:id="@+id/menu_project"
        android:icon="@drawable/menu_project"
        android:title="@string/project" />

    <item
        android:id="@+id/menu_square"
        android:icon="@drawable/menu_square"
        android:title="@string/square" />
    <item
        android:id="@+id/menu_public"
        android:icon="@drawable/menu_public"
        android:title="@string/wxPublic" />
    <item
        android:id="@+id/menu_me"
        android:icon="@drawable/menu_me"
        android:title="@string/mine" />

</menu>